--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
 		"@testing-library/user-event": "^13.5.0",
 		"axios": "^1.3.4",
 		"bootstrap": "^5.3.0-alpha3",
+		"formik": "^2.2.9",
 		"gh-pages": "^5.0.0",
 		"react": "^18.2.0",
 		"react-bootstrap": "^2.7.4",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.10.0",
 		"react-scripts": "5.0.1",
-		"web-vitals": "^2.1.4"
+		"web-vitals": "^2.1.4",
+		"yup": "^1.1.1"
 	},
 	"scripts": {
 		"predeploy": "npm run build",
